[package]
name = "hot-reload"
version = "0.1.0"
authors = ["Ben <ben.bromhead@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.18.0"
tokio = { version = "0.2.22", features = ["tcp", "udp", "uds", "macros", "rt-core", "io-util", "time"] }
clap = "2.33.3"
anyhow = "1.0.32"